Fixed bug #31796 (readline completion handler does not handle empty return values).